# mechabellum-scraper

./: .gitignore  pyproject.toml  tox.ini
docs/: conf.py  index.rst
reports/: .coverage.py312-test  pytest.xml  pytest.xml.py312-test
src/: mechabellum_scraper.py
src/mechabellum_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_example.py
